2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/3712
	* config/tc-i386.c (match_template): Use MAX_OPERANDS for the
	number of operands. Issue an error if MAX_OPERANDS != 4. Add
	the 4th operand check.

2006-12-13  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_arch_option_table): Add v7-{a,r,m}.
	* doc/c-arm.texi: Fix spelling of ARMv7 profile variants.

2006-12-12  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.h (WordMem): Document it for 64 bit memory
	reference.

2006-12-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/Makefile.am (as_TEXINFOS): Set.
	(as.info as.dvi as.html): Delete rule.
	* doc/Makefile.in: Regenerated.

2006-12-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in: Define GENINSRC_NEVER.
	* doc/Makefile.am (as.info): Remove srcdir prefix.
	(MAINTAINERCLEANFILES): Add info file.
	(DISTCLEANFILES): Pretend to add info file.
	* po/Make-in (.po.gmo): Put gmo files in objdir.
	* configure, Makefile.in, doc/Makefile.in: Regenerated.

2006-12-09  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.h (template): Use MAX_OPERANDS instead of 4
	for operand_types array.

2006-12-08  Christian Groessler  <chris@groessler.org>

	* config/tc-z8k.c (whatreg): Add comment describing function.
	Return NULL if symbol name characters follow the register number.
	(parse_reg): Use NULL instead of 0 for pointer values.  Stop
	processing if whatreg returned NULL.

2006-12-07  Kazu Hirata  <kazu@codesourcery.com>

	* config/tc-m68k.c: Update uses of EF_M68K_*.

2006-12-06  H.J. Lu <hjl@gnu.org>

	* config/tc-i386.h: Change the prefix order to SEG_PREFIX,
	ADDR_PREFIX, DATA_PREFIX, LOCKREP_PREFIX.

2006-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR gas/3607
	* subsegs.c (subseg_set_rest): Clear frch_cfi_data field.

2006-12-01  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_force_relocation): Return 1 for relocs against
	function symbols.

2006-11-29  Paul Brook  <paul@codesourcery.com>
